Use a scroll recorder rather than scroll offset for composited-scrolling backgrounds.

BUG=643741

CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2327243002
Cr-Commit-Position: refs/heads/master@{#417843}

Former-commit-id: 1e64d5cf1fd26c35ffbe26fbaf6d3033a42c9852